Foodback model created. Controllers and static pages created, some layout added. Paper clip installed. Having trouble with Paperclip.

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,2 @@
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<h1>Foodbacks</h1>
+<p>Foodbacks es un lugar para compartir comida hecha por ti, para darle gracias a alguien más.</p>
