--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,28 @@
-<h1>Welcome to Foodbacks</h1>
-This is home
 
-<% if user_signed_in? %>
-  Logged in as <%= current_user.email %> |
-  <%= link_to 'Sign out', destroy_authentication_session_path, method: :delete %>
-<% else %>
-  <%= link_to 'Sign in', new_authentication_session_path %>
-<% end %>
+<!--This line closes the container-->
+</div>
+
+<div id="mbbackground">
+  <div id="mainbanner">
+    <!--div class="container"-->
+      <h1>Bienvenido a Foodbacks</h1>
+      <h2>Comparte comida hecha por ti y agradece a alguien más</h2>
+
+
+
+        <% if user_signed_in? %>
+          Hola,
+          	<% if current_user.name	%>
+          	<%= current_user.name %>
+          	<% else %>
+          	<%= '¿cómo te llamas?' %>
+          	<% end %>
+          <%# link_to 'Sign out', destroy_authentication_session_path, method: :delete %>
+          <br>
+          <%= link_to 'Crea un Foodback', new_foodback_path, class: 'btn btn-primary btn-large' %>
+        <% else %>
+          <%= link_to 'Iniciar sesión', new_authentication_session_path, class: 'btn' %>
+        <% end %>
+      <!--/div-->
+  </div>
+</div>
