--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Happinessapp</title>
+  <title>Foodbacks</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div class="container">
 
+<%= render 'layouts/header' %>
+
+  <%# === This section is the render of any kind of alert, or "Flash messages" %>
+    <% flash.each do |name, msg| %>
+      <%= content_tag :div, :class => "alert #{name == :error ? "alert-error" : "alert-success" }" do %>
+        <a class="close" data-dismiss="alert" href="#">×</a>
+        <%= msg %>
+      <% end %>
+    <% end %>
+    
 <%= yield %>
+<%= render 'layouts/footer' %>
 
 </body>
 </html>
