--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,2 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<h1>¿Cómo funciona?</h1>
+<p>Foodbacks es un lugar para compartir comida con alguien más.</p>
