--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,32 @@
-<h1>Foodbacks</h1>
-<p>Foodbacks es un lugar para compartir comida hecha por ti, para darle gracias a alguien más.</p>
+<div class="container">
+	<div class="row-fluid">
+		<div class="span6">	
+			<h2>¿Por qué?</h2>
+			<br/>
+			<p>
+				Preparar comida es una de las conexiones más íntimas  con el mundo externo que el ser humano puede experimentar y una de las actividades más creativas que elaboramos. La comida es una compleja simplicidad y a la vez complejidad simple porque nos pone en una cadena alimenticia perpetua imposible de escapar. Como toda la comida viene de la naturaleza, nosotros dependemos de ella y ella depende de nosotros; eres lo que comes y comes lo que eres. Esta codependencia es un arranque de nuestra identidad, confianza y respeto por la vida. Compartimos la comida porque no queremos estar solos, nos da una oportunidad de balancear nuestra naturaleza egoísta. Al regalar el soporte básico de nuestra existencia a otra persona nos recuerda que pertenecemos a algo más grande que nosotros mismos. Cuando escoges los ingredientes para una comida y la preparas con amor, creas una historia  tal cual la conviertes en una obra del arte con un tiempo de vida físico limitado, la memoria y la experiencia de hacerla y compartirla la inmortaliza.
+			</p>
+
+			<br/>
+			<p>
+				El regalo más grande que puedes compartir con alguien es tu tiempo, porque cuando das tu tiempo, estás dando una porción de tu vida que nunca más regresará. El truco consiste en saber cómo cambiar el tiempo perdido por algo menos efímero y más trascendental.
+			<p/>
+
+			<p>
+				Esta plataforma es un agradecimiento para mi abuela que me enseñó a cómo plantar una lechuga, construir una casa en un árbol de manzana, hacer un hombre de nieve de papa, una catarina de tomate y tantas cosas más que me permitieron experimentar la vida de forma verdadera. Foodbacks  es mi forma de compartir su historia y agradecerle.
+			</p> 
+			<br/>
+			<h2>¿Cómo?</h2>
+			<br>
+			<p>
+				Foodbacks te invita a preparar una comida especial para la gente con quien la quieres compartir y agradecerles por algo que te es importante. Cuentas una historia de la comida que preparas y esta historia es tu gratitud hacia otros. Compartes la invitación con tu gente, se reúnen, comen y celebran. Tan simple como esto.
+			</p>
+			<br/>
+			<h2>¿Qué?</h2>
+			<p>
+				Una plataforma social para compartir la comida extraordinaria como una forma de gratitud
+			</p>
+			<br/>
+		</div>
+	</div>
+</div>
