--- a/app/assets/stylesheets/foodbacks.css.scss
+++ b/app/assets/stylesheets/foodbacks.css.scss
@@ -56,4 +56,6 @@ $asbestos: #7F8C8D;
     background-position: center top;
     background-size: 100% auto;
     max-height: 100%;
-}	
+}
+
+.message
