Trying to write a dropdown.

--- a/app/views/foodbacks/new.html.erb
+++ b/app/views/foodbacks/new.html.erb
@@ -1,3 +1,14 @@
+sdfdsfghsfghsdfgh
+          <select name="herolist">
+            <option value="0">Choose hero</option>
+            <option value="1">Spider Man</option>
+            <option value="2">Wolverine</option>
+            <option value="3">Captain America</option>
+            <option value="X-Men" selected="selected">X-Men</option>
+            <option value="Crocodile">Crocodile</option>
+          </select>
+          fsghdgfhdfgh
+
 <% provide(:title, 'New Foodback') %>
 <h1>Crea un Foodback</h1>
 <h2>Preparar comida es la mejor forma de dar las gracias</h2>
@@ -52,3 +63,6 @@ YA :title
 
 #Categories: 
 # orgánica, vegetariana, local, receta de la abuela, sustentable,  
+
+
+
