Cover added to the Foodbacks

--- a/app/assets/stylesheets/foodbacks.css.scss
+++ b/app/assets/stylesheets/foodbacks.css.scss
@@ -57,3 +57,9 @@ $asbestos: #7F8C8D;
     background-size: 100% auto;
     max-height: 100%;
 }
+
+.signin{
+	padding: 24px 24px 24px 24px;
+	border: 5px solid $clouds;
+	margin: 100px 0 100px 0;
+}
