--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,8 +12,8 @@
           <% link_to 'Sign out', destroy_authentication_session_path, method: :delete %>
           <br>
           <%= link_to 'Crea un Foodback', new_foodback_path, class: 'btn btn-primary btn-large' %>     
-          <%= @fbuser.name %>
-          <%= image_tag @fbuser.picture %>
+          <%#= @fbuser.name %>
+          <%#= image_tag @fbuser.picture %>
 
         <% else %>
           <%= link_to 'Únete a Foodbacks', new_authentication_session_path, class: 'btn' %>
