--- a/app/views/foodbacks/show.html.erb
+++ b/app/views/foodbacks/show.html.erb
@@ -1,3 +1,4 @@
+
 <div class="container">
 	<%#= image_tag @foodback.cover %>
 	<%= image_tag 'foodbackcover.jpg' %>
@@ -30,7 +31,7 @@
 		<% end %>
 		
 		<h3>Comparte este Foodback en Monterrey</h3>
-
+<!--
 			<%#= link_to 'Twitter', "https://twitter.com/share?url=" + "http://www.google.com" + "&text=" + "Compartiendo un Foodback en mi ciudad", class: 'btn', :target => '_blank' %>
 			
 				<%= link_to 'Facebook', 'facebook.com', class: 'btn', :target => '_blank'  %>
@@ -44,3 +45,8 @@
 </div>
 
 <a href="//www.pinterest.com/pin/create/button/?url=http%3A%2F%2Fwww.flickr.com%2Fphotos%2Fkentbrew%2F6851755809%2F&media=http%3A%2F%2Ffarm8.staticflickr.com%2F7027%2F6851755809_df5b2051c9_z.jpg&description=Next%20stop%3A%20Pinterest" data-pin-do="buttonPin" data-pin-config="above"><img src="//assets.pinterest.com/images/pidgets/pin_it_button.png" /></a>
+-->
+
+<a href="https://twitter.com/share" class="twitter-share-button" data-text="Compartiendo un Foodback" data-count="none">Tweet</a>
+
+<div class="fb-share-button" data-href="http://foodbacks.com" data-type="button"></div>
