--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,8 @@
   <!--div class="navbar-inner"-->
     <div class="container">
       <div class="nav">
-        <h1>Foodbacks</h1>
+        <%= image_tag 'foodbackslogo.png' %>
+        <!--<h1>Foodbacks</h1>-->
       </div>
       <nav>
         <ul class="nav pull-right">
