has one invited relation working

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,11 +1,10 @@
-<!--Probando cambios-->
 <!--This line closes the container-->
 </div>
 
 <div id="mbbackground">
   <div id="mainbanner">
     <!--div class="container"-->
-    <h1>Bienvenido a Foodbacks</h1>.
+    <h1>Bienvenido a Foodbacks</h1>
     <h2>Comparte comida hecha por ti y agradece a alguien más</h2>
     <h3>Comienza a descubrir Foodbacks en <%= link_to 'Monterrey', foodbacks_path %> </h3>
         <% if user_signed_in? %>
