--- a/app/views/foodbacks/new.html.erb
+++ b/app/views/foodbacks/new.html.erb
@@ -43,6 +43,9 @@
       <%= f.label :address, 'Dirección' %>
       <%= f.text_field :address %>
 
+      <%= f.label :date, 'Fecha' %>
+      <%= f.datetime_picker :date, :dateFormat => "yy-mm-dd" %>
+
       <%= f.label :content, 'Las Gracias'%>
       <%= f.text_area :content, placeholder:'Cuéntanos tu historia, por qué quieres dar las gracias.'  %>
 
