--- a/app/views/foodbacks/show.html.erb
+++ b/app/views/foodbacks/show.html.erb
@@ -22,6 +22,7 @@
 
 		<% if (current_user.id == @foodback.user.id) %>
 				<h4>Dónde: <%= @foodback.address %></h4>
+				<h4>Cuándo: <%= @foodback.date %></h4>
 		<% end %>
 		
 		<h4>Platillo: <%= @foodback.dish %></h4>
